--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 	<main>
 		<section>
 			<article>
-			
-			<Form>
-				<form action="mailto:SIANDO42@googlegroups.com" method="post" enctype="text/plain">
+			<form action="mailto:SIANDO42@googlegroups.com" method="post" enctype="text/plain">
 				Name:<br>
 				<input type="text" name="name"><br>
 				E-mail:<br>
@@ -32,7 +30,7 @@
 				<input type="text" name="comment" ><br><br>
 				<input type="submit" value="Send">
 				<input type="reset" value="Reset">
-			</Form>
+			</form>
 			</article>
 
 		</section>
