--- a/index.html
+++ b/index.html
@@ -21,13 +21,24 @@
 	<main>
 		<section>
 			<article>
-			<form action="mailto:SIANDO42@googlegroups.com" method="post" enctype="text/plain">
+			<form action="mailto:SIANDO42@googlegroups.com" method="post"enctype="text/plain">
 				Name:<br>
-				<input type="text" name="name"><br>
+				<input type="text" name="name"></br>
+				VornameName:<br>
+				<input type="text" name="vorname"></br>
 				E-mail:<br>
-				<input type="text" name="mail"><br>
-				Comment:<br>
-				<input type="text" name="comment" ><br><br>
+				<input type="text" name="mail"></br>
+				Telefonnummer:<br>
+				<input type="tel" name="number"></br>
+				Geburtsdatum</br>
+				<input type="date" name="geb" value=2016-10-24></br>
+				Items</br>
+				<select nema="Items" size="1"></br>
+					<option value="UIB">UIB</option>
+					<option value="IB" selected="selected">IB</option>
+					<option value="IMB">IMB</option>
+				</select>
+				</br>
 				<input type="submit" value="Send">
 				<input type="reset" value="Reset">
 			</form>
