--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 	<main>
 		<section>
 			<article>
-			<form action="mailto:SIANDO42@googlegroups.com" method="post"enctype="text/plain">
+			<form action="" method="post">
 				Name:<br>
-				<input type="text" name="name"></br>
+				<input type="text" name="name" required></br>
 				VornameName:<br>
-				<input type="text" name="vorname"></br>
+				<input type="text" name="vorname" required></br>
 				E-mail:<br>
-				<input type="text" name="mail"></br>
+				<input type="text" name="mail" required></br>
 				Telefonnummer:<br>
-				<input type="tel" name="number"></br>
+				<input type="number" name="number" min="0" required></br>
 				Geburtsdatum</br>
-				<input type="date" name="geb" value=2016-10-24></br>
+				<input type="date" name="geb" required></br>
 				Items</br>
-				<select nema="Items" size="1"></br>
+				<select nema="Items" size="1" required></br>
 					<option value="UIB">UIB</option>
 					<option value="IB" selected="selected">IB</option>
 					<option value="IMB">IMB</option>
