--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<form action="" method="post">
 				Name:<br>
 				<input type="text" name="name" required></br>
-				VornameName:<br>
+				Vornamename:<br>
 				<input type="text" name="vorname" required></br>
 				E-mail:<br>
 				<input type="text" name="mail" required></br>
